--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
+                  <h4>Drugstore employee, Kruidvat</h4>
                   <h5>April&ndash;July 2019</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
+                    <li>Stocking shelves&nbsp;</li>
+                    <li>Managing cash register&nbsp;</li>
                     <li>Part of my studies at Breda University of Applied Sciences</li>
                   </ul>
                 </div>
@@ -102,7 +102,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
+                  <h4>Supermarket employee, Plus</h4>
                   <h5>2018</h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
