--- a/page1.html
+++ b/page1.html
@@ -3,9 +3,25 @@
 <head>
 <meta charset="utf-8">
 <title>page 1</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Micro+5&display=swap" rel="stylesheet">
+<link href="css/mycss.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id felis sodales, elementum dolor quis, euismod sem. Etiam eu lectus sit amet nulla egestas luctus. Praesent tempus vulputate velit id vulputate. Sed eu elit posuere, imperdiet quam quis, pretium quam. Proin congue sapien eget sem ultrices feugiat eget eu massa. Morbi placerat ac nulla ut molestie. Donec tempor faucibus libero, vitae vestibulum ligula dapibus non. Nulla eleifend mi eget ligula gravida, et finibus quam maximus. </p><p> Sed consequat sit amet lorem nec fermentum. Nunc tristique fringilla magna at iaculis. Aliquam elementum nibh et sollicitudin eleifend. Aenean iaculis sapien a pretium consectetur. <b>Nulla</b> ornare dui a nisl tincidunt, ultrices fringilla lacus consequat. Maecenas at nunc ac libero malesuada scelerisque eu eget ex. Nullam luctus at enim sed tempor. In aliquet dolor sem, ut congue justo commodo at. Vivamus id mi sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce eget vehicula leo, ut aliquet lectus. Vestibulum urna ipsum, iaculis at eros nec, facilisis porta tortor.</p>
+	<p class="pipi">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id felis sodales, elementum dolor quis, euismod sem. Etiam eu lectus sit amet nulla egestas luctus. Praesent tempus vulputate velit id vulputate. Sed eu elit posuere, imperdiet quam quis, pretium quam. Proin congue sapien eget sem ultrices feugiat eget eu massa. Morbi placerat ac nulla ut molestie. Donec tempor faucibus libero, vitae vestibulum ligula dapibus non. Nulla eleifend mi eget ligula gravida, et finibus quam maximus. </p>
+	
+	<p class="lala"> Sed consequat sit amet lorem nec fermentum. Nunc tristique fringilla magna at iaculis. Aliquam elementum nibh et sollicitudin eleifend.</p>
+	
+	<p class="lala pipi"> Aenean iaculis sapien a pretium consectetur. <b>Nulla</b> ornare dui a nisl tincidunt, ultrices fringilla lacus consequat. Maecenas at nunc ac libero malesuada scelerisque eu eget ex. Nullam luctus at enim sed tempor. In aliquet dolor sem, ut congue justo commodo at. <span id="haha">Vivamus id mi sapien</span>. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce eget vehicula leo, ut aliquet lectus. Vestibulum urna ipsum, iaculis at eros nec, facilisis porta tortor.</p>
+	
+	<br><br>
+	<a href="page2.html">click here to go to page 2</a><br><br>
+	
+	<div class= "mybox">in faucibus orci luctus et ultrices posuere cubilia curae; Fusce eget vehicula leo, </div>
+	<div class= "mybox">in faucibus orci luctus et ultrices posuere cubilia curae; Fusce eget vehicula leo, </div>
+	
+	
 </body>
 </html>
