--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
                     <li>Taking orders</li>
-					<li>Pouring drinks</li>
-                  <br></ul>
+					<li>Pouring drinks <br><br></li>
+                  </ul>
                 </div>
               </li>
 				
@@ -106,8 +106,8 @@
                   <h6>September 2021 - January 2022</h6>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
 				<ul class="biography-details list-unstyled">
-                    <li>Managing the cash register</li>
-                  	<br></ul>
+                    <li>Managing the cash register<br><br></li>
+                  	</ul>
                 </div>
               </li>
 			
@@ -123,8 +123,8 @@
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
 				<ul class="biography-details list-unstyled">
                     <li>Managing the cash register</li>
-                    <li>Stocking shelves</li>
-                  <br></ul>
+                    <li>Stocking shelves<br><br></li>
+                  </ul>
                 </div>
               </li>
 
@@ -147,8 +147,8 @@
                   <h6>2022 &ndash; Now</h6>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Exchange with Bournemouth University</li>
-                  	<br></ul>
+                    <li>Exchange with Bournemouth University<br><br></li>
+                  	</ul>
                 </div>
               </li>
 			
@@ -162,8 +162,8 @@
                   <h4>Elde College, High School Diploma</h4>
                   <h6>2015 - 2020</h6>
                   <ul class="biography-details list-unstyled">
-                    <li>HAVO</li>
-                  	<br></ul>
+                    <li>HAVO<br><br></li>
+                  	</ul>
                 </div>
               </li>
 			
@@ -177,7 +177,7 @@
                   <h6>2020 &ndash; 2021</h6>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Exchange year</li>
+                    <li>Exchange year<br><br></li>
                   </ul>
                 </div>
               </li>		
