--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
     <!-- Links to the CSS styles from Bootstrap. -->
     <!-- -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	  
+	  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oooh+Baby&display=swap" rel="stylesheet">
+	  
+	
     <!-- -->
 
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
+	  
+	  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 
     <title>Krissie Donkers Resumé</title>
   </head>
@@ -49,8 +59,8 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="fw-bolder">Krissie Donkers</h1>
-          <h5 class="fst-italic tagline, belowtitle">Your expert in creative marketing!</h5>
+          <h1 class="abril-fatface-regular">Krissie Donkers</h1>
+          <h5 class="oooh-baby-regular">Your expert in creative marketing!</h5>
         </div>
       </header>
 
